--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "home": "https://NavCGaur.github.io/tax-consultancy",
   "name": "tax-consultancy",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
