--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "home": "https://NavCGaur.github.io/tax-consultancy",
+{ "homepage": "https://navcgaur.github.io/tax-consultancy",
   "name": "tax-consultancy",
   "version": "0.1.0",
   "private": true,
